# Nmap Changelog ($Id$); -*-text-*-

o Ncat now logs Nsock debug output to stderr instead of stdout, like
  its other debug messages. [David]

o Updated to the latest config.guess and config.sub. Thanks to Ty
  Miller for a reminder. [David]

o [NSE] Added nat-pmp-info script that uses the nat-pmp service to
  discover the external IP address of a router. [Patrik]

o [NSE] Added prerule support to snmp-interfaces and the ability to
  add the host's interface addresses to the scanning queue.  The new
  script arguments used for this functionality are "host" (required)
  and "port" (optional). [Kris]

o [NSE] Added the resolveall prerule script which takes a table of
  target names as a "hosts" argument and adds all of the resolved
  addresses (IPv4 or IPv6, depending on Nmap's -6 option) for all of
  the hosts to the scanning queue. [Kris]

o Fixed some inconsistencies in nmap-os-db and a small memory leak
  that would happen where there was more than one round of OS
  detection. These were reported by Xavier Sudre from netVigilance,
  Inc.

o [NSE] Fixed a bug with worker threads calling the wrong destructors.
  Fixing this allows better parallelism in http-brute.nse. The problem
  was reported by Patrik Karlsson. [David, Patrick]

o [Zenmap] Made the topology node radiuses grow logarithmically
  instead of linearly, so that hosts with thousands of open ports
  don't overwhelm the diagram. Also only open ports (not
  open|filtered) are considered when calculating node sizes. Henri
  Doreau found and fixed a bug in the implementation. [Daniel Miller]

o Increased the initial RTT timeout for ARP scans from 100 ms to
  200 ms. Some wireless and VPN links were taking around 300 ms to
  respond. The default of one retransmit gives them 400 ms to be
  detected.

o Upgraded the OpenSSL binaries shipped in our Windows installer to
  version 1.0.0a. [David]

o [NSE] Added the targets-traceroute script, which inserts traceroute
  hops onto Nmap scanning queue. [Henri Doreau]